src/test/deca/context/valid/provided/while_condition.deca
/*/ Description:
//    Conditions while
//
// Resultats:
// 
// Historique:
//    cree le 01/01/2022*/

{
   boolean a = true;
   boolean b = false;
   while (a == b)
   {
   	print("yes");
   }
}
