src/test/deca/context/invalid/provided/comp-incompatible4.deca
/*/ Description:
//    Comparaison
//
// Resultats:
//    Ligne 16: comparaison for not intet float.
// 
// Historique:
//    cree le 01/01/2022*/

{
   

   int a = 5;
   boolean b = true;
   /* Doit etre refuse.*/
   boolean c = a != "toto";
}
